Minor Soft Changes
- Moved notes around

--- a/tomcat/webapps/Trawl/style.css
+++ b/tomcat/webapps/Trawl/style.css
@@ -105,5 +105,7 @@ a:hover{
 
 /*Font colors*/
 /*http://www.color-hex.com/color/005b96*/
+/*http://www.color-hex.com/color/002856*/
+/*http://www.color-hex.com/color-palette/58262*/
 /*#id*/
 /*.class*/
