update to proper About.html

--- a/tomcat/webapps/Trawl/style.css
+++ b/tomcat/webapps/Trawl/style.css
@@ -143,6 +143,10 @@ a:hover{
     width:100%;
 }
 
+#about{ /*about.html*/
+    margin: 3% 5%;
+}
+
 /*300/400/600/700*/
 /*font-family: 'Open Sans', sans-serif;*/
 
